# food_organizer_frontend

./: .gitignore  CMakeLists.txt  Makefile  README.md  food_organizer_frontend.pro
src/: main.cpp
src/classes/: DashboardWidget.cpp  DashboardWidget.h  FinanceSingleFrame.cpp  FinanceSingleFrame.h  FinancesWidget.cpp  FinancesWidget.h  InitialWidget.cpp  InitialWidget.h  LoginWidget.cpp  LoginWidget.h  MainWindow.cpp  MainWindow.h  SettingsWidget.cpp  SettingsWidget.h  SigninWidget.cpp  SigninWidget.h  StorageSingleFrame.cpp  StorageSingleFrame.h  StorageWidget.cpp  StorageWidget.h  WeeklyPlannerWidget.cpp  WeeklyPlannerWidget.h
src/forms/: DashboardWidget.ui  FinanceSingleFrame.ui  FinancesWidget.ui  InitialWidget.ui  LoginWidget.ui  MainWindow.ui  SettingsWidget.ui  SigninWidget.ui  StorageSingleFrame.ui  StorageWidget.ui  WeeklyPlannerWidget.ui  ui_DashboardWidget.h  ui_FinanceSingleFrame.h  ui_FinancesWidget.h  ui_InitialWidget.h  ui_LoginWidget.h  ui_MainWindow.h  ui_SettingsWidget.h  ui_SigninWidget.h  ui_StorageSingleFrame.h  ui_StorageWidget.h  ui_WeeklyPlannerWidget.h
src/functions/: DateManager.cpp  DateManager.h
tools/: remove.bash
